PUSH NOTE : 2024-03-01-testpost.md

--- a/_posts/2024-03-01-testpost.md
+++ b/_posts/2024-03-01-testpost.md
@@ -10,4 +10,4 @@ tags:
 Hellohellohello
 
 
-![mountainpain.png](../images/obsidian/mountainpain.png)
+![mountainpain.png](../images/obsidian/mountainpain.png){:class="img-responsive"}
