PUSH NOTE : 2024-03-01-testpost.md

--- a/_posts/2024-03-01-testpost.md
+++ b/_posts/2024-03-01-testpost.md
@@ -10,9 +10,9 @@ tags:
 Hello
 
 
+1
 
-
-![mountainpain.png](../images/obsidian/mountainpain.png)
+![[../images/obsidian/mountainpain.png|mountainpain.png]]
 
 
 ![mountainpain](../images/obsidian/Bild1.png)
