PUSH NOTE : 2024-03-01-testpost.md

--- a/_posts/2024-03-01-testpost.md
+++ b/_posts/2024-03-01-testpost.md
@@ -11,8 +11,9 @@ Hello
 
 
 1
+2
 
-![[../images/obsidian/mountainpain.png|mountainpain.png]]
+![[mountainpain.png|mountainpain.png]]
 
 
-![mountainpain](../images/obsidian/Bild1.png)
+![mountainpain](images/obsidian/2021/Bild1.png)
