--- a/_posts/2024-03-01-testpost.md
+++ b/_posts/2024-03-01-testpost.md
@@ -12,8 +12,9 @@ Hello
 
 1
 2
+3
 
-![[mountainpain.png|mountainpain.png]]
+![mountainpain.png](mountainpain.png)
 
 
 ![mountainpain](images/obsidian/2021/Bild1.png)
