PUSH NOTE : 2024-03-01-testpost.md

--- a/_posts/2024-03-01-testpost.md
+++ b/_posts/2024-03-01-testpost.md
@@ -7,14 +7,15 @@ tags:
   - test
 ---
 
-Hello
+Hello..
 
-
+..
 1
 2
 3
+4
 
-![mountainpain.png](mountainpain.png)
+![[mountainpain.png|mountainpain.png]]
 
 
 ![mountainpain](images/obsidian/2021/Bild1.png)
