PUSH NOTE : 2024-03-01-testpost.md

--- a/_posts/2024-03-01-testpost.md
+++ b/_posts/2024-03-01-testpost.md
@@ -7,12 +7,12 @@ tags:
   - test
 ---
 
-Hello
+Hello..
 
-
+..
 1
 
 ![[mountainpain.png|mountainpain.png]]
 
 
-![mountainpain](images/obsidian/Bild1.png)
+![mountainpain](def/Bild1.png)
