PUSH NOTE : 2024-03-01-testpost.md

--- a/_posts/2024-03-01-testpost.md
+++ b/_posts/2024-03-01-testpost.md
@@ -10,11 +10,11 @@ tags:
 Hello..
 
 ..
-1
+12
 
 ![mountainpain.png](../images/obsidian/mountainpain.png)
 
 
-![mountainpain](../images/obsidian/Bild1.png)
+![mountainpain](https://nemologist.github.io/images/obsidian//Bild1.png)
 
-![](https://nemologist.github.io/images/obsidian/Bild1.png)
+![](https://nemologist.github.io/https://nemologist.github.io/images/obsidian//Bild1.png)
