--- a/_posts/2024-03-01-testpost.md
+++ b/_posts/2024-03-01-testpost.md
@@ -15,4 +15,4 @@ Hello..
 ![mountainpain.png](../images/obsidian/mountainpain.png)
 
 
-![mountainpain](https://nemologist.github.io/images/obsidian//Bild1.png)
+![mountainpain](../images/obsidian/Bild1.png)
